--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -76,6 +76,7 @@
   </head>
   <body>
     <header class="page-header" role="banner">
+      <img class="logo" src="{{ '/assets/logo.svg?v=' | append: site.github.build_revision | relative_url }}"/>
       <h1 class="project-name">{{ site.title }}</h1>
       <select id="languages" class="btn">
         <option value="en">English</option>
