--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -94,7 +94,7 @@
         <div class="site-footer-credits">
             <span><a href="{{ site.github.repository_url }}">{{ site.title }}</a> is maintained by <a href="https://brunomb.com" target="_blank">{{ site.github.owner_name }}</a>.</span>
             <span>
-                Credits go to the original & deactivated <a href="https://gohorseprocess.wordpress.com">gohorseprocess wordpress</a>
+                Credits go to the original & deactivated <a href="https://gohorseprocess.com.br/">gohorseprocess</a>
                 and translation authors
             </span>
             <span>This page is powered by <a href="https://pages.github.com">GitHub Pages</a>.</span>
