--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -73,6 +73,7 @@
     <meta name="theme-color" content="#157878">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+    <link rel="icon" href="{{ '/assets/logo.svg?v=' | append: site.github.build_revision | relative_url }}" sizes="32x32">
   </head>
   <body>
     <header class="page-header" role="banner">
