--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -93,12 +93,12 @@
         <a target="_blank" href="{{ site.github.repository_url }}/issues/new" class="btn">Contribute</a>
         
         <div class="site-footer-credits">
-            <span><a href="{{ site.github.repository_url }}">{{ site.title }}</a> is maintained by <a href="https://brunomb.com" target="_blank">{{ site.github.owner_name }}</a>.</span>
-            <span>
+            <span class="block"><a href="{{ site.github.repository_url }}">{{ site.title }}</a> website is <span class="strike-through">not</span> maintained by <a href="https://brunomb.com" target="_blank">{{ site.github.owner_name }}</a>.</span>
+            <span class="block">
                 Credits go to the original & deactivated <a href="https://gohorseprocess.com.br/">gohorseprocess</a>
                 and translation authors
             </span>
-            <span>This page is powered by <a href="https://pages.github.com">GitHub Pages</a>.</span>
+            <span class="block">This page is powered by <a href="https://pages.github.com">GitHub Pages</a>.</span>
         </div>
     </footer>
 
