Swap logo with Darkfall sticker

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -73,11 +73,14 @@
     <meta name="theme-color" content="#157878">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
-    <link rel="icon" href="{{ '/assets/logo.svg?v=' | append: site.github.build_revision | relative_url }}" sizes="32x32">
+    <link rel="icon" href="{{ '/assets/extreme-logo.png?v=' | append: site.github.build_revision | relative_url }}" sizes="32x32">
   </head>
   <body>
     <header class="page-header" role="banner">
-      <img class="logo" src="{{ '/assets/logo.svg?v=' | append: site.github.build_revision | relative_url }}"/>
+      <img class="logo"
+           title="Buy this sticker! Scroll down to credits"
+           src="{{ '/assets/extreme-logo.png?v=' | append: site.github.build_revision | relative_url }}"
+      />
       <h1 class="project-name">{{ site.title }}</h1>
       <select id="languages" class="btn">
         <option value="en">English</option>
@@ -97,6 +100,11 @@
             <div>
                 Credits go to the original & deactivated <a href="https://gohorseprocess.com.br/">gohorseprocess</a>
                 and translation authors
+            </div>
+            <div>
+              Logo credits to the original artist <a href="https://www.nerdstickers.com.br/artistas/darkfull/">DarkFull</a>.
+              You can buy the logo sticker <a href="https://www.nerdstickers.com.br/todos/extreme-go-horse/">here</a>.
+              <i>(Shipments only to Brazil)</i>.
             </div>
             <div>This page is powered by <a href="https://pages.github.com">GitHub Pages</a>.</div>
         </div>
