--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -72,7 +72,7 @@ header.page-header {
 
     .logo {
         max-width: 15em;
-        margin: 0 auto;
+        margin: 2em auto 0;
         display: block;
     }
 }
