Update contribute button link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -93,7 +93,7 @@
     </main>
 
     <footer class="site-footer">
-        <a target="_blank" href="{{ site.github.repository_url }}/issues/new" class="btn">Contribute</a>
+        <a target="_blank" href="{{ site.github.repository_url }}/blob/main/CONTRIBUTING.md" class="btn">Contribute</a>
         
         <div class="site-footer-credits">
             <div><a href="{{ site.github.repository_url }}">{{ site.title }}</a> website is <span class="strike-through">not</span> maintained by <a href="https://brunomb.com" target="_blank">{{ site.github.owner_name }}</a>.</div>
